fix: resolve WordPress empty p tag gaps and set cover background size for links to prevent side gaps

--- a/src/server/common/umiack-site-assets/css/top-base.css
+++ b/src/server/common/umiack-site-assets/css/top-base.css
@@ -35,6 +35,10 @@
 	margin: 0;
 }
 
+.main_article > p:empty {
+	display: none !important;
+}
+
 div,
 .article h2 {
 	margin: 0;
